ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_return_values3_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (1) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (2) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%2$] (3) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (15) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (20) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (21) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (25) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (32) at (2, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (33) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (35) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (36) at (2, 3) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 2.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytest, [0], [2])};
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (6) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (8) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (18) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (24) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (26) at (6, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (37) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (38) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (39) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (40) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (41) at (6, 1) { };
\node[font=\tiny] (note_3) at (3.5, 0.5) {Return([0])};
\node[font=\tiny] (note_4) at (3.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (4) [loop right] edge  node { } (4);
		\path[->, blue] (4) [bend right] edge  node { } (23);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (6) [loop right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (25);
		\path[->, blue] (6) [bend right] edge  node { } (26);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->] (0) edge (0);
		\path[->] (0) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (17);
		\path[->] (0) edge (10);
		\path[->] (0) edge (1);
		\path[->] (0) edge (10);
		\path[->] (0) edge (10);
		\path[->] (10) edge (11);
		\path[->] (10) edge (11);
		\path[->] (4) edge (4);
		\path[->] (4) edge (23);
		\path[->] (1) edge (2);
		\path[->] (4) edge (23);
		\path[->] (4) edge (23);
		\path[->] (4) edge (4);
		\path[->] (4) edge (23);
		\path[->] (2) edge node { } (25);
		\path[->] (6) edge (26);


                \end{tikzpicture}
            \end{document}
