ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_table_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:$taut$] (56) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (55) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (54) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (53) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (52) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (51) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (50) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (49) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (48) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (47) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (46) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (45) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (44) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (43) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (42) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (41) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (40) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (39) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (38) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (37) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (36) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (35) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (34) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (33) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (32) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (31) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (30) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (29) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (28) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (27) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (26) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (25) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (24) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (23) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (22) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (21) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (20) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$\%0$] (18) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (16) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (14) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (13) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (12) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (11) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (10) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (9) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (8) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:$taut$] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Const(2, 3.0)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Block(1)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Table([0, 1, 2, 2])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (16) [bend right] edge  node { } (17);
		\path[->, blue] (16) [bend right] edge  node { } (18);
		\path[->, blue] (16) [bend right] edge  node { } (32);
		\path[->, blue] (16) [bend right] edge  node { } (33);
		\path[->, blue] (16) [bend right] edge  node { } (34);
		\path[->, blue] (16) [bend right] edge  node { } (35);
		\path[->, blue] (16) [bend right] edge  node { } (36);
		\path[->, blue] (16) [bend right] edge  node { } (37);
		\path[->, blue] (16) [bend right] edge  node { } (38);
		\path[->, blue] (16) [bend right] edge  node { } (39);
		\path[->, blue] (16) [bend right] edge  node { } (40);
		\path[->, blue] (16) [bend right] edge  node { } (41);
		\path[->, blue] (16) [bend right] edge  node { } (42);
		\path[->, blue] (16) [bend right] edge  node { } (43);
		\path[->, blue] (16) [bend right] edge  node { } (44);
		\path[->, blue] (16) [bend right] edge  node { } (45);
		\path[->, blue] (16) [bend right] edge  node { } (46);
		\path[->, blue] (16) [bend right] edge  node { } (47);
		\path[->, blue] (16) [bend right] edge  node { } (51);
		\path[->, blue] (16) [bend right] edge  node { } (55);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (0) edge (16);
		\path[->] (16) edge (18);
		\path[->] (0) edge (19);
		\path[->] (5) edge (20);
		\path[->] (6) edge (21);
		\path[->] (7) edge (22);
		\path[->] (8) edge (23);
		\path[->] (9) edge (24);
		\path[->] (10) edge (25);
		\path[->] (11) edge (26);
		\path[->] (12) edge (27);
		\path[->, bend right] (13) edge (28);
		\path[->, bend right] (13) edge (29);
		\path[->, bend right] (13) edge (30);
		\path[->, bend right] (13) edge (31);
		\path[->] (5) edge (32);
		\path[->] (18) edge (33);
		\path[->] (6) edge (34);
		\path[->] (33) edge (35);
		\path[->] (7) edge (36);
		\path[->] (35) edge (37);
		\path[->] (8) edge (38);
		\path[->] (37) edge (39);
		\path[->] (9) edge (40);
		\path[->] (39) edge (41);
		\path[->] (10) edge (42);
		\path[->] (41) edge (43);
		\path[->] (11) edge (44);
		\path[->] (43) edge (45);
		\path[->] (12) edge (46);
		\path[->, bend right] (45) edge (47);
		\path[->, bend right] (45) edge (48);
		\path[->, bend right] (45) edge (49);
		\path[->, bend right] (45) edge (50);
		\path[->, bend right] (13) edge (51);
		\path[->, bend right] (13) edge (52);
		\path[->, bend right] (13) edge (53);
		\path[->, bend right] (13) edge (54);
		\path[->] (47) edge (55);
		\path[->] (0) edge (56);


                \end{tikzpicture}
            \end{document}
