ifds/src/tests/icfg/snapshots/ifds__tests__icfg__convert__test_ir_unop_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (14) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (13) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (12) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (11) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Unop(1, 0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Unop(1, 0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (0) edge (8);
		\path[->] (4) edge (9);
		\path[->] (5) edge (10);
		\path[->] (8) edge (11);
		\path[->] (8) edge (12);
		\path[->] (12) edge (13);
		\path[->] (12) edge (14);


                \end{tikzpicture}
            \end{document}
